--- a/content/bluebat/27.md
+++ b/content/bluebat/27.md
@@ -22,7 +22,7 @@ image = "bluebat/27.jpg"
 ```
 
 1. Filebeat+ELK部署文档 https://www.cnblogs.com/liangyou666/p/9185274.html#429388
-2. Hugo搭建Github Pages博客 https://yezihack.github.io/2019/08/build_hugo/
+2. Hugo搭建Github Pages博客 http://blog.sgfoot.com/2019/08/build_hugo/
 3. go实现布隆过滤器 https://github.com/willf/bloom
 
 - 编辑:百里
